// DBML schema for elogfetch
// Auto-generated from schema/db.sql via scripts/dbml/sql_to_dbml.ts
// DO NOT EDIT MANUALLY — run `make schema` to regenerate.

Enum "workflow_trigger_type" {
  "MANUAL"
  "START_OF_RUN"
  "END_OF_RUN"
  "FIRST_FILE_TRANSFERRED"
  "ALL_FILES_TRANSFERRED"
  "ALL_NONREC_FILES_TRANSFERRED"
  "RUN_PARAM_IS_VALUE"
}

Enum "elog_content_type" {
  "TEXT"
  "HTML"
  "MARKDOWN"
}

Table "detector" {
  "id" VARCHAR [not null]
  "name" VARCHAR [not null]
  "description" VARCHAR

  Indexes {
    id [pk]
    name [unique]
  }
}

Table "posix_group" {
  "name" VARCHAR [not null]

  Indexes {
    name [pk]
  }
}

Table "user" {
  "id" VARCHAR [not null]

  Indexes {
    id [pk]
  }
}

Table "workflowdefinition" {
  "id" VARCHAR [not null]
  "name" VARCHAR [not null]
  "executable" VARCHAR [not null]
  "trigger" workflow_trigger_type [not null]
  "location" VARCHAR [not null]
  "parameters" VARCHAR
  "run_param_name" VARCHAR
  "run_param_value" VARCHAR
  "run_as_user" VARCHAR

  Indexes {
    id [pk]
  }
}

Table "pi" {
  "id" VARCHAR [not null]
  "name" VARCHAR
  "email" VARCHAR

  Indexes {
    id [pk]
  }
}

Table "user_posix_group" {
  "user_id" VARCHAR [not null]
  "posix_group_name" VARCHAR [not null]

  Indexes {
    (user_id, posix_group_name) [pk]
  }
}

Table "experiment" {
  "experiment_id" VARCHAR [not null]
  "name" VARCHAR [not null]
  "instrument" VARCHAR [not null]
  "start_time" TIMESTAMP [not null]
  "end_time" TIMESTAMP
  "pi_id" VARCHAR [not null]
  "leader_account" VARCHAR [not null]
  "posix_group" VARCHAR [not null]
  "description" VARCHAR
  "fetched_at" TIMESTAMP [not null, default: `now()`]

  Indexes {
    experiment_id [pk]
    pi_id [name: "ix_experiment_pi_id"]
  }
}

Table "experiment_analysis_queue" {
  "experiment_id" VARCHAR [not null]
  "queue" VARCHAR [not null]

  Indexes {
    (experiment_id, queue) [pk]
  }
}

Table "experiment_slack_channel" {
  "experiment_id" VARCHAR [not null]
  "channel" VARCHAR [not null]

  Indexes {
    experiment_id [pk]
  }
}

Table "questionnaire" {
  "questionnaire_id" BIGSERIAL [not null, increment]
  "experiment_id" VARCHAR [not null]
  "proposal" VARCHAR
  "category" VARCHAR [not null]
  "field_id" VARCHAR [not null]
  "field_name" VARCHAR
  "field_value" VARCHAR
  "modified_time" TIMESTAMP
  "modified_uid" VARCHAR
  "created_time" TIMESTAMP [not null]

  Indexes {
    questionnaire_id [pk]
    (experiment_id, field_id) [unique, name: "uq_questionnaire_exp_field"]
    experiment_id [name: "ix_questionnaire_experiment_id"]
  }
}

Table "run" {
  "id" VARCHAR [not null]
  "run_number" INTEGER [not null]
  "experiment_id" VARCHAR [not null]
  "start_time" TIMESTAMP
  "end_time" TIMESTAMP
  "fetched_at" TIMESTAMP [not null, default: `now()`]

  Indexes {
    id [pk]
    (run_number, experiment_id) [unique, name: "uq_run_number_exp"]
    experiment_id [name: "ix_run_experiment_id"]
  }
}

Table "logbook" {
  "id" VARCHAR [not null]
  "experiment_id" VARCHAR [not null]
  "run_id" VARCHAR
  "created_time" TIMESTAMP [not null]
  "content" VARCHAR
  "content_type" elog_content_type [not null]
  "tags" "VARCHAR[]"
  "author" VARCHAR [not null]

  Indexes {
    id [pk]
    run_id [name: "ix_logbook_run_id"]
    experiment_id [name: "ix_logbook_experiment_id"]
  }
}

Table "run_detector" {
  "run_id" VARCHAR [not null]
  "detector_id" VARCHAR [not null]
  "experiment_id" VARCHAR [not null]
  "value" VARCHAR [not null]

  Indexes {
    (run_id, detector_id) [pk]
    detector_id [name: "ix_run_detector_detector_id"]
    experiment_id [name: "ix_run_detector_experiment_id"]
  }
}

Table "run_production_data" {
  "run_id" VARCHAR [not null]
  "experiment_id" VARCHAR [not null]
  "n_events" BIGINT
  "n_damaged" BIGINT
  "n_dropped" BIGINT
  "start_timestamp" TIMESTAMP
  "end_timestamp" TIMESTAMP
  "file_count" BIGINT
  "file_size_bytes" BIGINT

  Indexes {
    run_id [pk]
    experiment_id [name: "ix_run_production_data_experiment_id"]
  }
}

Table "workflow" {
  "id" VARCHAR [not null]
  "experiment_id" VARCHAR [not null]
  "run_id" VARCHAR [not null]
  "def_id" VARCHAR [not null]
  "user_id" VARCHAR [not null]
  "status" VARCHAR [not null]
  "submit_time" TIMESTAMP [not null]
  "tool_id" BIGINT
  "log_file_path" VARCHAR

  Indexes {
    id [pk]
    run_id [name: "ix_workflow_run_id"]
    user_id [name: "ix_workflow_user_id"]
    experiment_id [name: "ix_workflow_experiment_id"]
    def_id [name: "ix_workflow_def_id"]
  }
}

Ref:"user"."id" < "pi"."id" [delete: cascade]

Ref:"user"."id" < "user_posix_group"."user_id" [delete: cascade]

Ref:"posix_group"."name" < "user_posix_group"."posix_group_name" [delete: cascade]

Ref:"pi"."id" < "experiment"."pi_id"

Ref:"posix_group"."name" < "experiment"."posix_group"

Ref:"experiment"."experiment_id" < "experiment_analysis_queue"."experiment_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "experiment_slack_channel"."experiment_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "questionnaire"."experiment_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "run"."experiment_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "logbook"."experiment_id" [delete: cascade]

Ref:"run"."id" < "logbook"."run_id" [delete: set null]

Ref:"run"."id" < "run_detector"."run_id" [delete: cascade]

Ref:"detector"."id" < "run_detector"."detector_id" [delete: restrict]

Ref:"experiment"."experiment_id" < "run_detector"."experiment_id" [delete: cascade]

Ref:"run"."id" < "run_production_data"."run_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "run_production_data"."experiment_id" [delete: cascade]

Ref:"experiment"."experiment_id" < "workflow"."experiment_id" [delete: cascade]

Ref:"run"."id" < "workflow"."run_id" [delete: restrict]

Ref:"workflowdefinition"."id" < "workflow"."def_id" [delete: restrict]

Ref:"user"."id" < "workflow"."user_id" [delete: restrict]
